--- a/emploeemanagement/src/main/resources/application.properties
+++ b/emploeemanagement/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#MySQL Config
+spring.datasource.url=jdbc:mysql://localhost:3306/empmanagement
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
